deployments/kubernetes/magellan-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magellan-app-stable-service
spec:
  selector:
    app: magellan-app
    version: stable
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: magellan-app-canary-service
spec:
  selector:
    app: magellan-app
    version: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
